# desklab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: 00_RTM.md  bugs.md  claude-code-debug-command.md  ooa-analysis.md  requirements.md  tech-solution.md  工作流程.md
docs/01_analysis/: ai-enhancement.md  chat.md  note-editor.md  ppt.md  project.md  sources.md  studio.md
docs/02_design/: ai-enhancement.md  chat.md  mindmap.md  note-editor.md  ppt.md  project.md  sources.md  studio.md
docs/ui/: canvas.html  code.html  file-center.html  index.html  search.html  settings.html
skills/requirements-analyst/: SKILL.md
src/: App.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: apikey.rs  canvas.rs  chat.rs  export.rs  mindmap.rs  mod.rs  note.rs  ppt.rs  project.rs  search.rs  source.rs  workspace.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/models/: canvas.rs  chat.rs  mindmap.rs  mod.rs  note.rs  presentation.rs  project.rs  source.rs
src-tauri/src/services/: embedding.rs  export.rs  file_service.rs  keychain.rs  mod.rs  ppt_export.rs  text_extractor.rs
src/data/: icons.ts
src/hooks/: useSearchShortcut.ts
src/pages/: HomePage.css  HomePage.tsx  StudioPage.css  StudioPage.tsx
src/plugins/: PluginContext.ts  PluginLoader.ts  PluginRegistry.ts  hooks.ts  index.ts  types.ts
src/services/: export.ts  keychain.ts
src/stores/: themeStore.ts
(+156 files in other folders)
