[package]
name = "desklab"
version = "0.1.0"
description = "DeskLab - Personal Workspace Assistant"
authors = ["DeskLab Team"]
edition = "2021"

[lib]
name = "desklab_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
image = "0.24"
pdf-extract = "0.7"
docx-rs = "0.4"
zip = "0.6"
walkdir = "2"
keyring = "2"
genpdf = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
